# opengl-book-impl

./: CMakeLists.txt  LICENSE  README.md
src/chapter1/: CMakeLists.txt  chapter1.c  main.c
src/chapter2/: CMakeLists.txt  chapter2.c
src/chapter3/: CMakeLists.txt  chapter3.c
src/chapter4/: CMakeLists.txt  chapter4.c  simple.fragment.glsl  simple.vertex.glsl
src/math/: CMakeLists.txt  utils.c  utils.h
